--- a/src/components/Nav/nav.module.scss
+++ b/src/components/Nav/nav.module.scss
@@ -2,24 +2,35 @@
 @import '../../base-styles/mixins';
 @import '../../base-styles/placeholders';
 
+@keyframes navOn {
+  from {
+    opacity: 0;
+    transform-origin: bottom;
+    transform: scaleY(0);
+  }
+  to {
+    opacity: 1;
+    transform-origin: bottom;
+    transform: scaleY(1);
+  }
+}
+
 .nav_content_on,
 .nav_content_off {
   align-items: center;
   background-color: $color-dark;
+  counter-reset: index;
   flex-direction: column;
   height: 100%;
   justify-content: center;
   left: 0;
   position: fixed;
   top: 0;
-  transition: opacity $transition;
   width: 100%;
 }
 
 .nav_content_on {
   display: flex;
-  opacity: 1;
-  transition-delay: 1s;
   z-index: 1000;
 }
 
@@ -31,9 +42,14 @@
 .nav_item {
   @extend %uppercase;
   @extend %reset-btn;
+  counter-increment: index;
   color: $color-base;
   font-family: $serif;
   font-size: $fs-md;
+
+  &:before {
+    content: counter(index);
+  }
 
   @include respond-to($mobile-lg) {
     font-size: $fs-xl;
@@ -72,14 +88,14 @@
   font-size: $fs-xs;
   font-weight: bold;
   left: 0;
-  padding: $spacing-md $spacing-base;
+  padding: $spacing-md $spacing-base $spacing-base;
   position: fixed;
   z-index: 1000;
 
   @include respond-to($tablet) {
-    bottom: $spacing-xl;
     font-size: $fs-sm;
-    padding: $spacing-base $spacing-lg;
+    padding-bottom: $spacing-md;
+    bottom: $spacing-lg;
   }
 }
 
